--- a/index.html
+++ b/index.html
@@ -11,52 +11,62 @@
 
 <body>
   <div class="top-container">
-    <img class="top-badal" src="images/badal.png" alt="badal-img" height="100" width="250">
+    <!-- <img class="top-badal" src="images/photo.avif" alt="badal-img" height="100" width="250"> -->
     <h1>I'm Surajkumar.</h1>
-    <p>a web designer.</p>
-    <img class="bottom-badal" src="images/badal.png" alt="badal-img" height="100" width="250">
+    <p>A Web Developer.</p>
+    <!-- <img class="bottom-badal" src="images/thenanobel-programming-17.01-inkscape-svg.png" alt="badal-img" height="100" width="250"> -->
 
 
   </div>
   <div class="middle-container">
     <div class="profile">
-      <img class="round" src="images/lalu.png" alt="my profile pic" height="200" width="200">
+      <img class="round" src="images/mypic.png" alt="my profile pic" height="200" width="200">
       <h2>Hello.</h2>
-      <p>I'm the student of electronic and telecommunication and web developer from G.H.Raisoni College of Engineering(Autonomous).<br>
-        I❤tea and cook my own food.</p>
+      <p>As a web developer, I specialize in designing and creating interactive and user-friendly websites. My expertise
+        includes coding in languages like HTML, CSS, JavaScript and ReactJS to build responsive and visually appealing
+        web applications.</p>
     </div>
     <hr>
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="code-img" src="https://image.flaticon.com/icons/svg/1069/1069094.svg" alt="my skill" height="150px" width="150px">
-        <h3>Design & Development</h3>
-        <p class="mami">I started learning to code when I was in 11th because I wanted to be a web designer and wants to make my own Websites.
-          Overatime, I have gained a enough knowledge of design and developing web pages and web applications.</p>
-      <div class="skill-row">
-          <img class="chilli-img" src="https://image.flaticon.com/icons/svg/1822/1822153.svg" alt="my skill" height="150px" width="150px">
-          <h3>Chicken Challenge</h3>
-          <p class="mama">But my best skill is actually eating chicken. I am the undisputed king of hot wing challenges. Soyastick and lays are my favourite snacks.</p>
+        <div class="top-skill">
+        <div class="firstSkill">
+          <img class="code-img" src="images/coding_boy.svg" alt="my skill" height="150px" width="150px">
+          <h3>Design, Development & Integration</h3>
         </div>
+        <p class="mami"> I am skilled in utilizing frameworks and libraries such as React or Vue.js to develop dynamic and efficient front-end interfaces. Additionally, I have experience with back-end technologies like Node.js 
+          Overatime, I have gained a enough knowledge of design and developing web applications.</p>
+        </div>
+        <div>
+          <div class="firstSkill">
+            <h3>Food Challenge</h3>
+          <img class="chilli-img" src="images/food2.jpg" alt="my skill"
+            height="150px" width="150px">
+        </div>
+          <p class="mama">But my best skill is actually eating food. I am the undisputed king of hot wing challenges.
+            Biryani and Pizza are my favourite food.</p>
+          </div>
       </div>
       <hr>
       <div class="contact-me">
         <h2>Get In Touch</h2>
         <h3>If you love hot wings as much as I do.</h3>
-        <p class="kiddo">Love hot wings as much as I do?Let's talk about how awesome they are! We can code while we eat hot wings!</p>
+        <p class="kiddo">Love hot wings as much as I do?Let's talk about how awesome they are! We can code while we eat
+          hot wings!</p>
         <a class="butn" href="mailto:surajjpsingh77@gmail.com">CONTACT ME</a>
       </div><br><br>
     </div>
 
     <div class="bottom-container"><br><br>
-      <a class="footer-link" href="https://www.linkedin.com/"S>LinkedIn</a>
-      <a class="footer-link" href="https://twitter.com/">Twitter</a>
-      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-      <p class="copyright">© 2019 Surajkumar Singh @The App Brewery. </p>
+      <a class="footer-link" href="https://www.linkedin.com/in/surajkumar-singh-621423131?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" S>LinkedIn</a>
+      <a class="footer-link" href="https://www.instagram.com/surajkumar__singh?igsh=MTRkeHc3amthd2cyNA==">Instagram</a>
+      <a class="footer-link" href="https://www.facebook.com/profile.php?id=100008130317752">Facebook</a>
+      <p class="copyright">© 2024 Surajkumar Singh </p>
     </div>
 
 
 
+</body>
 
-  </body>
 </html>
